# strap

./: .gitignore  Cargo.toml  README.md  out.hex  sudo
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/behave/: mod.rs  mouse.rs  util.rs
src/keyboard/: keyboard.rs  keycodes.rs  mod.rs  util.rs
